codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_bad_result.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (bad result)
▌
▌ Connectivity diagnostics
▌   - Proxy environment variables are set and may affect
▌     connectivity.
▌     - HTTP_PROXY = http://127.0.0.1:7890
▌     - HTTPS_PROXY = http://127.0.0.1:7890
▌
▌ (optional) Write a short description to help us further

Press enter to confirm or esc to go back
